testing/tests/ui/macro-super.stderr
error: failed to parse template source at row 1, column 35 near:
       "%}"
 --> tests/ui/macro-super.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
